@@ -1,6 +1,9 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2012-08-12  Dirk Schulze  <dschulze@adobe.com>
+- Fix references to Compositing spec.
+
 2012-08-10  Dirk Schulze  <dschulze@adobe.com>
 
 - Add sentence to property interpolation.
